CHANGELOG

UNRELEASED
    * FIX: JSONP timeout is now incremental like other strategies
2015-02-04  2.9.5
    * fix aborted requests in IE9, #76

2015-19-03  2.9.4
    * force async XHR

2015-19-03  2.9.3
    * test suite, including request strategy test suite
    * IE10 should now behave as a CORS supported XMLHttpRequest browser, as it is
    * running tests on many browsers, using saucelabs
    * refactor around `_makeXmlHttpRequestByHost` and `_makeJsonpRequestByHost`
    * remove unused opts.callback(retry, success, obj, message) in all make..Request functions
    * FIX: do not retry with JSONP when statusCode is 4xx

2015-02-03  2.9.2
    * Fixed calls to `.search(function() {})`, `.search(null, function() {})`, `.search(undefined, function() {})
    * Fixed shared cache amongst instances

2015-02-03  2.9.1
    * Fixed listIndexes pagination, not working if page=0

2015-01-13  2.9.0
    * Angular.js & jQuery compatibility (returning promises)
    * Helper: ability to exclude facets

2015-01-13  2.8.6
    * Search helper: ability to set default facet filters

2015-01-07  2.8.5
    * Avoid CORS preflight request

2014-12-31  2.8.4
    * Fixed a bug in JSONP fallback on multi-queries and getObject when a secured API Key was used (X-Algolia-TagFilters parameter was not set, resulting in a 403 permission denied error)

2014-12-30  2.8.3
    * Helper optimization: number of nested queries is now driven by the number of refined disjunctive facets only

2014-12-23  2.8.2
    * Increase the request timeout after each retry

2014-12-09  2.8.1
    * Enabled DSN by default (is working even if only one datacenter is selected)

2014-11-28  2.8.0
    * Move to algolia.net by default

2014-11-25  2.7.5
    * Expose one option to select the TTL (prepare migration to .net, allow to gain some milliseconds compared to .io)

2014-11-12  2.7.4
    * Expose more options (jsonp & requestTimeoutInMs)
    * Change the way the JSONP fallback works

2014-10-29  2.7.3